--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
     <!--     Fonts and icons     -->
@@ -21,21 +20,18 @@
 <body>
 <div class="wrapper">
     <div class="sidebar" data-color="blue">
-        <!--
-            Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
-        -->
         <div class="logo">
             <a href="https://xia.com" class="simple-text logo-mini">
                 <img class="image" src="assets/images/cropped-xia-xray-gamma-ray-products-logo.jpg">
             </a>
-            <a href="index1.html" class="simple-text logo-normal">
+            <a href="index.html" class="simple-text logo-normal">
                 Pixie-Net
             </a>
         </div>
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href="assets/cgi/cgitraces.cgi">
+                    <a href="assets/html/adcpage.html">
                         <i class="now-ui-icons education_atom"></i>
                         <p>ADC traces</p>
                     </a>
@@ -67,55 +63,59 @@
             </ul>
         </div>
     </div>
-
     <div class="main-panel">
-        <div class="panel-header page-header-image">
-            <img src="assets/images/Xia_LLC_web_header.jpg"></a>
+        <div class="panel-header">
+            <div class="header text-center">
+                <h1 class="title">Pixie-Net Homepage</h1>
+            </div>
         </div>
-        <h1> Pixie-Net Dashboard</h1></p>
-        <ul>
-            <li><a href="assets/html/mcapage.html">MCA spectra</a>
-            <li><a href="assets/html/rspage.html">Run status</a> (short)
-            <li> PSA <a href="assets/html/psahistpage.html">histogram</a>, <a href="assets/html/psahistprojpage.html">with
-                projections</a> or <a href="assets/html/psasurfacepage.html">surface</a> plot
-        </ul>
-        <h2>DAQ Results</h2>
-        <p><b>After</b> the data acquisition, open/download </p>
-        <ul>
-            <li><a href="LMdata.txt"> 0x500</a> List mode data with waveforms (from run type 0x500, text)</li>
-            <li><a href="LMdata.dat"> 0x501</a> List mode data without waveforms (from run type 0x501, csv)</li>
-            <li><a href="LMdata.dt2"> 0x502</a> List mode with PSA (from run type 0x502, csv)</li>
-            <li><a href="LMdata.dt3"> 0x503</a> List mode coincidence data (from run type 0x503, csv)</li>
-            <li><a href="LMdata.b00"> 0x400/402</a> Binary list mode data (from run types 0x400, 0x402)</li>
-            <li><a href="MCA.csv"> MCA spectra </a> as csv file</li>
-            <li><a href="RS.csv"> Run statistics </a> as csv file (full)</li>
-            <li><a href="psa2D.csv"> PSA histogram </a> as csv file</li>
-        </ul>
-
-        <p> To view <b>very short</b> list mode data files (run type 0x501) as a table, <a
-                href="assets/html/lmtablepage.html"> click here</a>.
-            (Large files take very long to format as table.) </p>
-        <p>To view most recent averaged ADC traces in a plot, <a href="assets/html/adcavgpage.html"> click here</a>.</p>
-        <p>To view LM waveforms from latest 0x500 DAQ, <a href="assets/cgi/cgiwaveforms.cgi?evno=0"> click here</a>.</p>
-
-
-        <h2> CGI Current Data </h2>
-        <p><b>When no other task is in progress</b>, view/refresh
-        <ul>
-            <li><a href="assets/cgi/cgitraces.cgi"> ADC traces </a></li>
-            <li><a href="assets/cgi/cgiavgtraces.cgi"> Averaged ADC traces </a></li>
-            <li><a href="assets/cgi/cgistats.cgi"> Run statistics </a> (full)</li>
-        </ul>
-        </p>
-
-        <p> For other web operations (login required), <a href="assets/html/webops.html"> click here </a>
-
-        <h2> Help </h2>
-        <p> View Pixie-Net <a href="doc/Pixie_Net_Manual.pdf"> manual </a></p>
-        <p> XIA support website for <a href="http://support.xia.com/default.asp?W772"> Pixie-Net </a></p>
+        <div class="content">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2>Welcome!!</h2>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <p>If you're seeing this page, it means you've successfully setup your Pixie-Net. You can
+                                use these webpages to</p>
+                            <ul>
+                                <li>download data that you've collected,</li>
+                                <li>visualize data on disk,</li>
+                                <li>view run statistics,</li>
+                                <li>and perform some data acquisition functions.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-md-offset-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2>Help!</h2>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            You can get help from various sources. Here's a short list.
+                            <ul>
+                                <li><a href="doc/Pixie_Net_Manual.pdf"> Pixie-Net manual</a></li>
+                                <li><a href="http://support.xia.com/default.asp?W772">XIA Support Page</a></li>
+                                <li><a href="mailto:support@xia.com">Email</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="img-fluid">
+                <img src="assets/images/Xia_LLC_web_header.jpg">
+            </div>
+        </footer>
     </div>
 </div>
-
 </body>
 <!--   Core JS Files   -->
 <script src="assets/js/core/jquery-3.4.1.min.js" type="text/javascript"></script>
