--- a/assets/html/daq.html
+++ b/assets/html/daq.html
@@ -19,64 +19,112 @@
 </head>
 
 <body>
-<div class="box">
-    <img src="../images/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
-    <p></p>
-    <p>
-    <h1> Pixie-Net Web Operations</h1></p>
-    Shortcuts: <a href="../cgi/cgitraces.cgi"> ADC traces </a>,
-    <a href="../cgi/cgistats.cgi"> Run statistics </a>,
-    <a href="../../index.html"> Home page </a>,
-    <a href="mcapage.html">MCA spectra</a>
-
-
-    <h2> CGI Executables </h2>
-    <p><b>Run executables as if typed in terminal</b>:
-    <ul>
-        <li><a href="../cgi/acquire.cgi"> acquire </a></li>
-        <li><a href="../cgi/oincdaq.cgi"> coincdaq </a></li>
-        <li><a href="../cgi/findsettings.cgi"> findsettings </a></li>
-        <li><a href="../cgi/gettraces.cgi"> gettraces </a></li>
-        <li><a href="../cgi/progfippi.cgi"> progfippi </a></li>
-        <li><a href="../cgi/runstats.cgi"> runstats </a></li>
-        <li><a href="../cgi/startdaq.cgi"> startdaq </a></li>
-    </ul>
-    </p>
-    <p><b>When no other task is in progress</b>, view/refresh
-    <ul>
-        <li><a href="../cgi/cgitraces.cgi"> ADC traces </a></li>
-        <li><a href="../cgi/cgistats.cgi"> Run statistics </a> (full)</li>
-    </ul>
-    </p>
-
-    <h2>DAQ Results</h2>
-    <p><b>After</b> the data acquisition, <b>open/download</b></p>
-    <ul>
-        <li><a href="../../LMdata.txt"> 0x500</a> List mode data with waveforms (from run type 0x500, text)</li>
-        <li><a href="../../LMdata.dat"> 0x501</a> List mode data without waveforms (from run type 0x501, csv)</li>
-        <li><a href="../../LMdata.dt2"> 0x502</a> List mode with PSA (from run type 0x502, csv)</li>
-        <li><a href="../../LMdata.dt3"> 0x503</a> List mode coincidence data (from run type 0x503, csv)</li>
-        <li><a href="../../LMdata.b00"> 0x400/402</a> Binary list mode data (from run types 0x400, 0x402)</li>
-        <li><a href="../../MCA.csv"> MCA spectra </a> as csv file</li>
-        <li><a href="../../RS.csv"> Run statistics </a> as csv file (full)</li>
-        <li><a href="../../psa2D.csv"> PSA histogram </a> as csv file</li>
-    </ul>
-
-    <p>View most recent data<b> in plots and tables</b></p>
-    <ul>
-        <li><a href="mcapage.html">MCA spectra</a>
-        <li><a href="rspage.html">Run status</a>
-        <li> PSA <a href="psahistpage.html">histogram</a>, <a href="psahistprojpage.html">with projections</a> or <a
-                href="psasurfacepage.html">surface</a> plot
-        <li><a href="adcpage.html"> ADC traces</a>.
-    </ul>
-
-
-    <p>To view LM waveforms from latest 0x500 DAQ, <a href="../cgi/cgiwaveforms.cgi?evno=0"> click here</a>.</p>
-
-    <h2> Help </h2>
-    <p> XIA support website for <a href="http://support.xia.com/default.asp?W772"> Pixie-Net </a></p>
+<div class="wrapper">
+    <div class="sidebar" data-color="blue">
+        <div class="logo">
+            <a href="https://xia.com" class="simple-text logo-mini">
+                <img class="image" src="../images/cropped-xia-xray-gamma-ray-products-logo.jpg">
+            </a>
+            <a href="index.html" class="simple-text logo-normal">
+                Pixie-Net
+            </a>
+        </div>
+        <div class="sidebar-wrapper" id="sidebar-wrapper">
+            <ul class="nav">
+                <li>
+                    <a href="../html/adcpage.html">
+                        <i class="now-ui-icons education_atom"></i>
+                        <p>ADC traces</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="../html/mcapage.html">
+                        <i class="now-ui-icons design_app"></i>
+                        <p>MCA spectra</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="../html/rspage.html">
+                        <i class="now-ui-icons ui-1_bell-53"></i>
+                        <p>Run Statistics</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="../html/psahistpage.html">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>Pulse-Shape Analysis</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="../html/daq.html">
+                        <i class="now-ui-icons location_map-big"></i>
+                        <p>DAQ</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-panel">
+        <div class="panel-header">
+            <div class="header text-center">
+                <h1 class="title">Pixie-Net Homepage</h1>
+            </div>
+        </div>
+        <div class="content">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2>Welcome!!</h2>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <p>If you're seeing this page, it means you've successfully setup your Pixie-Net. You can
+                                use these webpages to</p>
+                            <ul>
+                                <li>download data that you've collected,</li>
+                                <li>visualize data on disk,</li>
+                                <li>view run statistics,</li>
+                                <li>and perform some data acquisition functions.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-md-offset-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2>Help!</h2>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            You can get help from various sources. Here's a short list.
+                            <ul>
+                                <li><a href="doc/Pixie_Net_Manual.pdf"> Pixie-Net manual</a></li>
+                                <li><a href="http://support.xia.com/default.asp?W772">XIA Support Page</a></li>
+                                <li><a href="mailto:support@xia.com">Email</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="img-fluid">
+                <img src="../images/Xia_LLC_web_header.jpg">
+            </div>
+        </footer>
+    </div>
 </div>
 </body>
+<!--   Core JS Files   -->
+<script src="../js/core/jquery-3.4.1.min.js" type="text/javascript"></script>
+<script src="../js/core/popper.min.js" type="text/javascript"></script>
+<script src="../js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="../js/core/perfect-scrollbar.min.js" type="text/javascript"></script>
+
+<!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
+<script src="../js/theme/now-ui-dashboard.js" type="text/javascript"></script>
 
 </html>
